--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@ layout   : default
 permalink: /
 # Custom Page Variables
 # ─────────────────────
-title: Bootstrap 4 &mdash; Voorbeeld
+title: Home
 ---
 <div class="jumbotron">
     <h1 class="display-3">{{ page.title }}</h1>
