--- a/pages/betaald.html
+++ b/pages/betaald.html
@@ -1,19 +1,20 @@
 ---
 layout   : default
-permalink: /
+permalink: betaald
 # Custom Page Variables
 # ─────────────────────
 title: Betaald
 ---
 
-<div boven>
-        
-        
-        </div>
-        <div class="jumbotron">
-            <h1 class="display-3">{{ page.title }}</h1>
-        </div>
-        <div class="container">
-        <div id="gek"></div>
-            <a class="btn btn-primary" href="http://getbootstrap.com/docs/4.0/getting-started/introduction/">Bootstrap 4 documentation</a>
-        </div>
+<div class="jumbotron text-xs-center">
+      <img src="images/betaald.gif" class="img-fluid" alt="Responsive image">  
+        <h1 class="display-3">Bedankt voor je bestelling!</h1>
+        <p class="lead"><strong>Please check your email</strong> for further instructions on how to complete your account setup.</p>
+        <hr>
+        <p>
+          Problemen?<a href="contact.html">Neem contact met ons op!</a>
+        </p>
+        <p class="lead">
+          <a class="btn btn-primary btn-sm" href="https://bootstrapcreative.com/" role="button">Ga terug naar de homepagina.</a>
+        </p>
+      </div>
