--- a/pages/index.html
+++ b/pages/index.html
@@ -1,18 +1,34 @@
 ---
 layout   : default
-permalink: /
+permalink: /index
 # Custom Page Variables
 # ─────────────────────
 title: Home
 ---
-<div boven>
-
-
-</div>
-<div class="jumbotron">
-    <h1 class="display-3">{{ page.title }}</h1>
-</div>
+<header>
+<div class="d-flex flex-row-reverse">
+        <span class="border border-dark"><div class="p-2">Twitter</div></span>
+        <span class="border border-dark"><div class="p-2">Facebook</div></span>
+      </div>
+      <div id="blok">
+        <blockquote class="blockquote">
+                <p class="mb-0">Geen fiets, maar toch je willen
+                                verplaatsen van punt A naar B?
+                                Productief zijn in de buitenlucht en toch genieten van een cafesfeer? 
+                                Kies dan voor spot op onze BIERSPOTS!.</p>
+                            <a class="btn btn-primary"  href="contact.html" role="button">Meer info</a>
+                              </blockquote>
+                            </div>
+                        </header>
 <div class="container">
-<div id="gek"></div>
-    <a class="btn btn-primary" href="http://getbootstrap.com/docs/4.0/getting-started/introduction/">Bootstrap 4 documentation</a>
-</div>
+        <div id="blok2">
+                    <p class="mb-0" class="overons">Wij geloven erin dat productiviteit en gezelligheid versmolten kan worden in een activiteit. 
+                        In combinatie met het ontmoeten van nieuwe mensen tijdens de rit zien wij dit als een ideaal vervoersmiddel. 
+                        Er zijn verschillende (non)alcoholische bieren aan boord, waardoor er voor iedereen wat is. 
+                        BIERSPOT is alleen nog te vinden, maar wie weet ook binnenkort bij jou in de buurt.
+                        Kies dan voor spot op onze BIERSPOTS!.</p>
+                        <a class="btn btn-primary"  href="overons.html" role="button">Ik wil meer weten</a>
+                             
+                                                        </div>
+
+                                                    </div>
