--- a/pages/over.html
+++ b/pages/over.html
@@ -1,12 +1,11 @@
 ---
 layout   : default
-permalink: /
+permalink: over
 # Custom Page Variables
 # ─────────────────────
-title: Over
+title: Over 
 ---
-<div boven>
-        
+
         
         </div>
         <div class="jumbotron">
