--- a/pages/productoverzicht.html
+++ b/pages/productoverzicht.html
@@ -1,6 +1,6 @@
 ---
 layout   : default
-permalink: /
+permalink: productoverzicht
 # Custom Page Variables
 # ─────────────────────
 title: Productoverzicht
