--- a/pages/index.html
+++ b/pages/index.html
@@ -6,17 +6,14 @@ permalink: /index
 title: Home
 ---
 <header>
-<div class="d-flex flex-row-reverse">
-        <span class="border border-dark"><div class="p-2">Twitter</div></span>
-        <span class="border border-dark"><div class="p-2">Facebook</div></span>
-      </div>
       <div id="blok">
+          <img src="images/bierfiets.jpg"  class="img-fluid" alt="Responsive image">  
         <blockquote class="blockquote">
                 <p class="mb-0">Geen fiets, maar toch je willen
                                 verplaatsen van punt A naar B?
                                 Productief zijn in de buitenlucht en toch genieten van een cafesfeer? 
                                 Kies dan voor spot op onze BIERSPOTS!.</p>
-                            <a class="btn btn-primary"  href="contact.html" role="button">Meer info</a>
+                            <a class="btn btn-primary"  href="productoverzicht.html" role="button">Meer info</a>
                               </blockquote>
                             </div>
                         </header>
@@ -27,7 +24,7 @@ title: Home
                         Er zijn verschillende (non)alcoholische bieren aan boord, waardoor er voor iedereen wat is. 
                         BIERSPOT is alleen nog te vinden, maar wie weet ook binnenkort bij jou in de buurt.
                         Kies dan voor spot op onze BIERSPOTS!.</p>
-                        <a class="btn btn-primary"  href="overons.html" role="button">Ik wil meer weten</a>
+                        <a class="btn btn-primary"  href="over.html" role="button">Ik wil meer weten</a>
                              
                                                         </div>
 
