--- a/pages/productoverzicht.html
+++ b/pages/productoverzicht.html
@@ -14,6 +14,11 @@ title: Productoverzicht
             <h1 class="display-3">{{ page.title }}</h1>
         </div>
         <div class="container">
-        <div id="gek"></div>
-            <a class="btn btn-primary" href="http://getbootstrap.com/docs/4.0/getting-started/introduction/">Bootstrap 4 documentation</a>
+         <img src="images/productoverzicht.jpg" class="img-fluid" alt="Responsive image">  
+        <p id="gek">Een BOB bestuurt de fiets zodat jij en de anderen kunnen genieten van een zelf getapt biertje!
+        De BOB laat ten alle tijden weten wanneer het uw stop is. 
+        Onze bierfietsen zijn als enige in Belgie voorzien van elektrische trapondersteuning en parasols zodat er met zon en regen altijd gefietst kan worden. 
+        De bierfiets is geschikt voor minimaal 5 en maximaal 17 personen. Wij hebben meerdere fietsen, om u zo te verzekeren van een plek. 
+        Te weinig mensen aan boord? Geen probleem, dan krijg je gewoon je geld terug.</p>
+        <a class="btn btn-primary"  href="winkelwagen.html" role="button">Bestellen</a>
         </div>
